--- a/index.html
+++ b/index.html
@@ -7,6 +7,5 @@
   <H1>Essa e uma pagina de teste</H1>
 <img src= "ae101.jpg">
   <img src=width="200px"height="200px"scr="ae101.jpg">
-  
-</BODY>
+</BOD>
 </HTML>
