--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <TITLE>Auto electrica los Antonios</TITLE>
 </HEAD>
 <BODY>
-  <H1>Essa e uma pagina de teste</H1>
+  <H1>Informações</H1>
 <img src= "ae101.jpg">
   <img src= "width="200px "height="200px scr= "ae101.jpg">
 </BODY>
