--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <BODY>
   <H1>Informações do nosso trabalho</H1>
 <img src= "ae101.jpg">
-  <img src= "width="200px "height="200px scr= "ae101.jpg">
+  <img src= "width="200px" height="200px" scr= "ae101.jpg">
 </BODY>
 </HTML>
