--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </HEAD>
 <BODY>
   <H1>Informações do nosso trabalho</H1>
-<img src= "corolla95.jpg" width="200px" height="200px" src= "ae101.jpg">
- 
+<img src= "corolla95.jpg">
+  <img= width="200px" height="200px" src= "ae101.jpg">
   
 </BODY>
 </HTML>
