--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <BODY>
   <H1>Informações do nosso trabalho</H1>
 <img src= "corolla95.jpg">
-  <img= width="200px" height="200px" src= "ae101.jpg"/>
+  <img= width="200px" height="200px" src= "ae101.jpg">
   
 </BODY>
 </HTML>
