--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <HTML>
 <HEAD>
 <META CHARSET="UTF-8">
-<TITLE>Auto electrica los Antonios</TITLE>
+<TITLE>Antonio Auto Electrica</TITLE>
 </HEAD>
 <BODY>
-  <H1>Informações do nosso trabalho</H1>
+  <H1>Antonio Auto Electrica</H1>
 <img src= "corolla95.jpg">
   <img= width="200px" height="200px" src= "ae101.jpg">
   
