--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </HEAD>
 <BODY>
   <H1>Antonio Auto Electrica</H1>
-<img src= "corolla95.jpg">
-  <img= width="200px" height="200px" src= "ae101.jpg">
+  
+  <img= width="200px" height="200px" src= "corolla95.jpg">
   
 </BODY>
 </HTML>
