--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <BODY>
   <H1>Antonio Auto Electrica</H1>
   
-  <img= width="200px" height="200px" src= "corolla95.jpg">
+  <img width="1250px"src= "corolla95.jpg"/>
   
 </BODY>
 </HTML>
