--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <BODY>
   <H1>Antonio Auto Electrica</H1>
   
-  <img width="1250px"src= "corolla95.jpg"/>
+  <img width="100%"src= "corolla95.jpg"/>
   
 </BODY>
 </HTML>
