--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <HTML>
 <HEAD>
 <META CHARSET="UTF-8">
-<TITLE>Antonio Auto Electrica</TITLE>
+<TITLE>Auto Electrica Los Antonios</TITLE>
 </HEAD>
 <BODY>
-  <H1>Antonio Auto Electrica</H1>
+  <H1>Auto Electrica Los Antonios</H1>
   
   <img width="100%"src= "corolla95.jpg"/>
   
