--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <HEAD>
 <META CHARSET="UTF-8">
 <TITLE>Auto Electrica Los Antonios</TITLE>
-</HEAD>
+</HEAD><DIV ALIGN= "CENTER"
 <BODY>
   <H1>Auto Electrica Los Antonios</H1>
   
   <img width="30%"src= "corolla95.jpg"/>
 
-</BODY>
+</BODY><DIV/>
 </HTML>
