--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <HEAD>
 <META CHARSET="UTF-8">
 <TITLE>Auto Electrica Los Antonios</TITLE>
+  <STYLE>
+    BODY {Background-color:blue;
+          color:white
+          Tex-aligh:center;}
+    h1 {font-size:2.5em
+        display:inline-bock;
+        vertical-alingh:mile;}
+    img {max-width:80%;
+         height:auto;
+         vertical-alingh:mile}
+    </STYLE>
+    </HEAD>
 </HEAD><DIV ALIGN= "CENTER"
 <BODY>
   <H1>Auto Electrica Los Antonios</H1>
