--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <META CHARSET="UTF-8">
 <TITLE>Auto Electrica Los Antonios</TITLE>
   <STYLE>
-    BODY {Background-color:blue;
+    BODY {Background-color:red;
           color:white
-          Tex-aligh:center;}
+          TexT-aligh:center;}
     h1 {font-size:2.5em
         display:inline-bock;
         vertical-alingh:mile;}
