--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <META CHARSET="UTF-8">
 <TITLE>Auto Electrica Los Antonios</TITLE>
   <STYLE>
-    BODY {Background-color:red;
+    BODY {background-color:red;
           color:white
           TexT-aligh:center;}
     h1 {font-size:2.5em
